force-app/main/default/objects/Expense_Claim__c/Expense_Claim__c.object-meta.xml
<CustomObject>
    <label>Expense Claim</label>
    <nameField>
        <displayFormat>EXPC-{000000}</displayFormat>
        <label>Expense Claim No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>