force-app/main/default/objects/Expense_Claim__c/fields/All_Receipts_Attached__c.field-meta.xml
<CustomField>
    <fullName>All_Receipts_Attached__c</fullName>
    <formula>Expense_Item_Count__c = Attached_Receipt_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Receipts Attached?</label>
    <type>Checkbox</type>
</CustomField>