force-app/main/default/objects/Expense_Claim__c/fields/Attached_Receipt_Count__c.field-meta.xml
<CustomField>
    <fullName>Attached_Receipt_Count__c</fullName>
    <label>Attached Receipt Count</label>
    <summaryFilterItems>
        <field>Expense_Item__c.Receipt_Attached__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense_Item__c.Expense_Claim__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>