force-app/main/default/objects/Expense_Claim__c/fields/Expense_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Expense_Item_Count__c</fullName>
    <label>Expense Item Count</label>
    <summaryFilterItems>
        <field>Expense_Item__c.Type__c</field>
        <operation>notEqual</operation>
        <value>Mileage</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense_Item__c.Expense_Claim__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>