force-app/main/default/objects/Expense_Claim__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Expense_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense_Item__c.Expense_Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>