force-app/main/default/objects/Expense_Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Attached_Receipt_Count__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>