force-app/main/default/objects/Expense_Claim__c/listViews/My_Expense_Claims.listView-meta.xml
<ListView>
    <fullName>My_Expense_Claims</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Attached_Receipt_Count__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Expense Claims</label>
</ListView>