force-app/main/default/objects/Expense_Claim__c/listViews/Submitted.listView-meta.xml
<ListView>
    <fullName>Submitted</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Attached_Receipt_Count__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Submitted</label>
</ListView>